--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -100,6 +100,7 @@
     "goBack": "Go back",
     "stepN": "Step {0}",
     "previousStep": "Previous precedente",
-    "nextStep": "Next step"
+    "nextStep": "Next step",
+    "ingredientAlreadyExists": "The ingredient already exists"
   }
 }
