--- a/src/locale/it.json
+++ b/src/locale/it.json
@@ -100,6 +100,7 @@
     "goBack": "Torna indietro",
     "stepN": "Step {{step}}",
     "previousStep": "Step precedente",
-    "nextStep": "Step successivo"
+    "nextStep": "Step successivo",
+    "ingredientAlreadyExists": "L'ingrediente esiste già"
   }
 }
