bug: When edit an image it doesn't add the new image on the BE

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -101,6 +101,7 @@
     "stepN": "Step {0}",
     "previousStep": "Previous precedente",
     "nextStep": "Next step",
-    "ingredientAlreadyExists": "The ingredient already exists"
+    "ingredientAlreadyExists": "The ingredient already exists",
+    "unableUpdateImage": "Unable to update the image"
   }
 }
